--- a/package.json
+++ b/package.json
@@ -4,24 +4,30 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
     "expo": "~54.0.27",
     "expo-asset": "~12.0.11",
+    "expo-audio": "~1.1.0",
     "expo-av": "~16.0.8",
     "expo-constants": "~18.0.11",
+    "expo-crypto": "~15.0.8",
     "expo-device": "~8.0.10",
     "expo-font": "~14.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-notifications": "~0.32.14",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-markdown-display": "^7.0.2",
